--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
     "php": ">=5.4.0",
     "ext-gmp": "*",
     "ext-json": "*",
-    "bitwasp/bitcoin": "~0.0"
+    "bitwasp/bitcoin": "~0.0",
+    "react/socket-client": "~0.4",
+    "react/socket": "~0.4",
+    "react/dns": "~0.4"
   },
   "require-dev": {
     "bitwasp/testing-php": "~0.0",
