Add classes for handling IP addresses of different types

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "symfony/console": "~2.6",
     "react/socket-client": "~0.4",
     "react/socket": "~0.4",
-    "react/dns": "~0.4"
+    "react/dns": "~0.4",
+    "christian-riesen/base32": "~1.2"
   },
   "require-dev": {
     "bitwasp/testing-php": "~0.0",
