--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,12 @@
     "php": ">=5.4.0",
     "ext-gmp": "*",
     "ext-json": "*",
-    "bitwasp/bitcoin": "~0.0.21",
+    "bitwasp/bitcoin": "~0.0.22",
     "symfony/console": "~2.6",
-    "react/socket-client": "~0.4",
+    "react/socket-client": "~0.5",
     "react/socket": "~0.4",
     "react/dns": "~0.4",
+    "clue/socks-react": "~0.4",
     "christian-riesen/base32": "~1.2"
   },
   "require-dev": {
