--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,18 @@
 language: php
 
 php:
-  - 5.4
   - 5.5
   - 5.6
   - hhvm
-  - nightly
+  - 7.0
 
 install:
     - composer update --prefer-source
 
 script:
   - php vendor/bin/phpunit
-  - php vendor/bin/phpcs -n --standard=PSR1,PSR2 --report=full src/
+  - php vendor/bin/phpcs -n --standard=PSR1,PSR2 --report=full src/ tests
 
 after_script:
    - wget https://scrutinizer-ci.com/ocular.phar
-   - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ] && [ "$TRAVIS_PHP_VERSION" != "nightly" ]; then php ocular.phar code-coverage:upload --format=php-clover build/docs/clover.xml; fi;'
+   - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ] && [ "$TRAVIS_PHP_VERSION" != "7.0" ]; then php ocular.phar code-coverage:upload --format=php-clover build/docs/clover.xml; fi;'
