--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ script:
 
 after_script:
    - wget https://scrutinizer-ci.com/ocular.phar
-   - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ] && [ "$TRAVIS_PHP_VERSION" != "7.0" ]; then php ocular.phar code-coverage:upload --format=php-clover build/docs/clover.xml; fi;'
+   - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover build/docs/clover.xml; fi;'
