--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "christian-riesen/base32": "~1.2"
   },
   "require-dev": {
-    "bitwasp/testing-php": "~0.0",
-    "symfony/yaml": "~2.6"
+    "ext-json": "*",
+    "phpunit/phpunit": "^5.4.0",
+    "squizlabs/php_codesniffer": "^2.0.0"
   }
 }
