--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0",
     "phpunit/phpunit": "^6.0",
-    "symfony/yaml": "~2.6"
+    "symfony/yaml": "~2.6",
+    "phpstan/phpstan": "^0.9.2"
   }
 }
