--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ install:
 script:
   - php vendor/bin/phpunit
   - php vendor/bin/phpcs -n --standard=PSR1,PSR2 --report=full src/
+  - vendor/bin/phpstan analyse src -l 7
 
 after_script:
    - wget https://scrutinizer-ci.com/ocular.phar
    - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ] && [ "$TRAVIS_PHP_VERSION" != "nightly" ]; then php ocular.phar code-coverage:upload --format=php-clover build/docs/clover.xml; fi;'
+
