BC break: Bump bitcoinphp ^v0.0.35, react/socket ^0.8.0, react/dns ^0.4.0
react/dns broke our resolver in a newer version, but since
they now provide resolveAll we can do away with our own Dns
classes

--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
     }
   },
   "require": {
-    "bitwasp/bitcoin": "~0.0.33.2",
-    "react/socket": "v0.8.0",
-    "react/dns": "~0.4.0",
+    "bitwasp/bitcoin": "^v0.0.35",
+    "react/socket": "^v0.8.0",
+    "react/dns": "^0.4.0",
     "clue/socks-react": "~0.4",
     "christian-riesen/base32": "~1.2"
   },
