--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     "bitwasp/bitcoin": "^v0.0.35",
     "react/socket": "^v0.8.0",
     "react/dns": "^0.4.0",
-    "clue/socks-react": "~0.4",
-    "christian-riesen/base32": "~1.2"
+    "christian-riesen/base32": "^1.3.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0",
