--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     }
   },
   "require": {
-    "bitwasp/bitcoin": "^v0.0.35",
-    "react/socket": "^v0.8.0",
+    "bitwasp/bitcoin": "^1.0.0",
+    "react/socket": "^0.8.0",
     "react/dns": "^0.4.0",
     "christian-riesen/base32": "^1.3.0"
   },
